[package]
name = "ticket-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11"
]}
log = "0.4.27"
egui_inbox = "0.10.0"
rfd = "0.16.0"
csv = "1.4.0"
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.0"

[profile.dev.package.'*']
opt-level = 2

